@@ -26,7 +26,7 @@ SCALE updown 1.9 2.9   0 255 0
 
 NODE DEFAULT
 	LABEL {node:this:name}
-	ICON images/my_router.png
+	ICON images/Router.png
 
 NODE node1
 	POSITION 100 100
@@ -161,15 +161,15 @@ NODE tfont7
 ########
 
 NODE scaleup
-	POSITION 200 650
-	ICON 100 100 images/my_router.png
+	POSITION 50 650
+	ICON 100 100 images/Router.png
 
 NODE scaledown
-	POSITION 400 650
+	POSITION 250 650
 	ICON 100 100 images/bw_gradient_1024.png 
 	
 NODE scaledown2
-	POSITION 600 650
+	POSITION 450 650
 	ICON 100 100 suite-2.png 
 	LABELOFFSET N
 	LABELFONT 170
@@ -270,6 +270,71 @@ NODE note412
 	LABELBGCOLOR none
 	LABELOUTLINECOLOR none
 	
+        
+        
+######################
+
+NODE artificial_note
+    POSITION artificial1 0 -30
+    LABELOUTLINECOLOR none
+    LABELBGCOLOR none
+    LABELFONT 170
+    LABEL These are "artificial" icons
+    ICON none
+    
+
+NODE artificial1
+    ICON 64 32 box
+    POSITION 650 370
+    LABEL Box
+    LABELFONT 170
+    LABELOFFSET C
+    LABELOUTLINECOLOR none
+    LABELBGCOLOR none
+    
+NODE artificial2
+    ICON 32 32 round
+    POSITION artificial1 0 50
+    LABELFONT 170
+    LABELOFFSET C
+    LABEL Rnd
+    LABELOUTLINECOLOR none
+    LABELBGCOLOR none
+
+NODE artificial2a
+    ICON 64 32 round
+    POSITION artificial2 0 50
+    LABELFONT 170
+    TARGET static:30:70
+    USESCALE none
+    LABELOFFSET C
+    LABEL Rnd2
+    LABELOUTLINECOLOR none
+    LABELBGCOLOR none
+
+NODE artificial3
+    ICON 32 32 nink
+    POSITION artificial2a 0 50
+    LABELFONT 170
+    LABELOFFSET S
+    TARGET static:30:70
+    USESCALE none
+
+NODE artificial4
+    ICON 32 32 inpie
+    TARGET static:30:70
+    POSITION artificial3 0 50
+    LABELFONT 170
+    LABELOFFSET S
+    USESCALE none
+    
+NODE artificial5
+    ICON 32 32 outpie
+    TARGET static:30:70
+    POSITION artificial4 0 50
+    LABELFONT 170
+    LABELOFFSET S
+    USESCALE none
 		
 #####################3
 
